# Design-Patterns

./: CMakeLists.txt
src/: CMakeLists.txt
src/10Builder/: BMWBuilder.h  BMWModel.h  BenzBuilder.h  BenzModel.h  Builder.cpp  CMakeLists.txt  Director.h
src/11Bridge/: Bridge.cpp  CMakeLists.txt  Clothes.h  House.h  IPod.h  IProduct.h  NewCorp.cpp  NewCorp.h  NewHouseCorp.h  ShanZhaiCorp.cpp  ShanZhaiCorp.h
src/12Command/: AddRequirementCommand.h  CMakeLists.txt  CodeGroup.h  Command.cpp  DeletePageCommand.h  PageGroup.h  RequirementGroup.h
src/13Decorator/: CMakeLists.txt  Decorator.cpp  FouthGradeSchoolReport.h  HighScoreDecorator.h  ReportDecorator.h  SortDecorator.h
src/14Iterator/: CMakeLists.txt  IIterator.h  IProjectIterator.h  Project.cpp  Project.h  ProjectIterator.h  iterator.cpp
src/15Memento/: CMakeLists.txt  Memento.cpp
src/16Observer/: CMakeLists.txt  HanFeiziObservable.h  LiSiObserver.h  Observer.cpp  ZhouSiObserver.h
src/17ChainOfResponsibility/: CMakeLists.txt  ChainofResponsibility.cpp  stdafx.cpp
src/18Visitor/: BaseVisitor.cpp  BaseVisitor.h  CMakeLists.txt  CommonEmployee.cpp  CommonEmployee.h  Employee.h  Manager.cpp  Manager.h  Visitor.cpp
src/19State/: CMakeLists.txt  CloseingState.cpp  Lift.cpp  Lift.h  LiftState.cpp  LiftState.h  OpenningState.cpp  OpenningState.h  RunningState.cpp  RunningState.h  State.cpp  StoppingState.cpp  StoppingState.h
src/1Strategy/: BackDoor.cpp  BackDoor.h  BlockEnemy.cpp  BlockEnemy.h  CMakeLists.txt  Context.cpp  Context.h  GivenGreenLight.cpp  GivenGreenLight.h  IStrategy.h  Strategy.cpp
src/20Memento/: CMakeLists.txt
src/20Prototype/: CMakeLists.txt  Prototype.cpp
src/21Flyweight/: CMakeLists.txt  Flyweight.cpp
src/22Interpreter/: CMakeLists.txt  Context.cpp  Context.h  Interpret.cpp  Interpret.h  Interpreter.cpp
src/23Mediator/: CMakeLists.txt  Mediator.cpp  MediatorOrganization.cpp  MediatorOrganization.h  Person.cpp  Person.h
src/2Agent/: Agent.cpp  CMakeLists.txt  IKindWomen.h  JiaShi.cpp  JiaShi.h  PanJinLian.cpp  PanJinLian.h  WangPo.cpp  WangPo.h  stdafx.cpp
src/3Single/: CMakeLists.txt  Emperor.cpp  Emperor.h  Single.cpp  stdafx.cpp
src/5Factory/: BlackHuman.cpp  BlackHumanFactory.cpp  BlackHumanFactory.h  CMakeLists.txt  Factory.cpp  WhiteHumanFactory.h
src/6Facade/: CMakeLists.txt  Facade.cpp  ILetterProcess.h  LetterprocessImpl.h  ModenPostOffice.h
src/7AbstractFactory/: AbstractFactory.cpp  BlackFemaleHuman.h  BlackHuman.h  BlackMaleHuman.h  CMakeLists.txt  FemaleHumanFactory.h  MaleHumanFactory.cpp  MaleHumanFactory.h  StandardHumanFactory.h
src/8Adapter/: Adapter.cpp  CMakeLists.txt  IOuterUser.h  IUserInfo.h  OuterUser.cpp  OuterUser.h  OuterUserBaseInfo.h  OuterUserInfo.cpp  OuterUserInfo.h  UserInfo.cpp  UserInfo.h
src/9Template/: CMakeLists.txt  HummerH1Model.h  HummerH2Model.h  HummerModel.h  Template.cpp
